// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration: unfurls private unfurls a user who does not have their GitHub account connected is gracefully onboarded 1`] = `
Object {
  "attachments": "[{\\"color\\":\\"#24292f\\",\\"text\\":\\":white_check_mark: Success! <@U0Other> is now connected to <https://github.com/wilhelmklopp|@wilhelmklopp>\\",\\"mrkdwn_in\\":[\\"text\\"]}]",
  "channel": "C74M",
  "token": "xoxa-token",
  "user": "U0Other",
}
`;

exports[`Integration: unfurls private unfurls a user who does not have their GitHub account connected is gracefully onboarded 2`] = `
Object {
  "channel": "C74M",
  "token": "xoxa-token",
  "ts": "1510704981.000364",
  "unfurls": "{\\"https://github.com/bkeepers/dotenv\\":{\\"color\\":\\"#24292f\\",\\"footer\\":\\":lock: <https://github.com/bkeepers/dotenv|bkeepers/dotenv>\\",\\"footer_icon\\":\\"https://assets-cdn.github.com/favicon.ico\\",\\"fallback\\":\\"bkeepers/dotenv\\",\\"title\\":\\"bkeepers/dotenv\\",\\"text\\":\\"A Ruby gem to load environment variables from \`.env\`. \\",\\"fields\\":[{\\"title\\":\\"Stars\\",\\"value\\":4230,\\"short\\":true},{\\"title\\":\\"Language\\",\\"value\\":\\"Ruby\\",\\"short\\":true}],\\"mrkdwn_in\\":[\\"text\\",\\"fields\\"],\\"ts\\":1343101131}}",
}
`;

exports[`Integration: unfurls private unfurls a user who does not have their GitHub account connected is gracefully onboarded 3`] = `
Set {
  "T000A-C74M-https://github.com/bkeepers/dotenv",
}
`;

exports[`Integration: unfurls private unfurls a user who does not have their GitHub account connected is gracefully onboarded 4`] = `
Map {
  "T000A-C74M-https://github.com/bkeepers/dotenv" => true,
}
`;

exports[`Integration: unfurls private unfurls automatically unfurls private resources if they are part of subscribed repo 1`] = `
Set {
  "T000A-C74M-https://github.com/bkeepers/dotenv",
}
`;

exports[`Integration: unfurls private unfurls automatically unfurls private resources if they are part of subscribed repo 2`] = `
Map {
  "T000A-C74M-https://github.com/bkeepers/dotenv" => true,
}
`;

exports[`Integration: unfurls private unfurls clicking "Dismiss" deletes the prompt and the unfurl record 1`] = `
Object {
  "delete_original": true,
}
`;

exports[`Integration: unfurls private unfurls clicking "Dismiss" deletes the prompt and the unfurl record 2`] = `Set {}`;

exports[`Integration: unfurls private unfurls clicking "Dismiss" deletes the prompt and the unfurl record 3`] = `Map {}`;

exports[`Integration: unfurls private unfurls clicking "Show rich preview" results in unfurl and deletes prompt 1`] = `
Object {
  "channel": "C74M",
  "token": "xoxa-token",
  "ts": "1510704981.000364",
  "unfurls": "{\\"https://github.com/bkeepers/dotenv\\":{\\"color\\":\\"#24292f\\",\\"footer\\":\\":lock: <https://github.com/bkeepers/dotenv|bkeepers/dotenv>\\",\\"footer_icon\\":\\"https://assets-cdn.github.com/favicon.ico\\",\\"fallback\\":\\"bkeepers/dotenv\\",\\"title\\":\\"bkeepers/dotenv\\",\\"text\\":\\"A Ruby gem to load environment variables from \`.env\`. \\",\\"fields\\":[{\\"title\\":\\"Stars\\",\\"value\\":4230,\\"short\\":true},{\\"title\\":\\"Language\\",\\"value\\":\\"Ruby\\",\\"short\\":true}],\\"mrkdwn_in\\":[\\"text\\",\\"fields\\"],\\"ts\\":1343101131}}",
}
`;

exports[`Integration: unfurls private unfurls clicking "Show rich preview" results in unfurl and deletes prompt 2`] = `
Object {
  "attachments": Array [
    Object {
      "actions": Array [
        Object {
          "name": "this-channel",
          "style": "primary",
          "text": "Enable for this channel",
          "type": "button",
        },
        Object {
          "name": "all-channels",
          "text": "Enable for all channels",
          "type": "button",
        },
        Object {
          "name": "cancel",
          "text": "Always ask me",
          "type": "button",
        },
      ],
      "callback_id": "unfurl-auto-null|bkeepers/dotenv",
      "color": "#24292f",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "You can enable automatic previews for *private* links to bkeepers/dotenv that *you* post either to this channel or to all channels in the \`acmecorp\` workspace.",
      "title": "Done! Want to automatically show rich previews for bkeepers/dotenv?",
    },
  ],
  "delete_original": true,
}
`;

exports[`Integration: unfurls private unfurls clicking "Show rich preview" results in unfurl and deletes prompt 3`] = `
Set {
  "T000A-C74M-https://github.com/bkeepers/dotenv",
}
`;

exports[`Integration: unfurls private unfurls clicking "Show rich preview" results in unfurl and deletes prompt 4`] = `
Map {
  "T000A-C74M-https://github.com/bkeepers/dotenv" => true,
}
`;

exports[`Integration: unfurls private unfurls for users who do not yet have their GitHub account connected connecting their account via an Unfurl prompt of an invalid link results in a not found message 1`] = `
Object {
  "attachments": "[{\\"color\\":\\"#24292f\\",\\"text\\":\\":white_check_mark: Success! <@U0Other> is now connected to <https://github.com/wilhelmklopp|@wilhelmklopp>\\",\\"mrkdwn_in\\":[\\"text\\"]}]",
  "channel": "C74M",
  "token": "xoxa-token",
  "user": "U0Other",
}
`;

exports[`Integration: unfurls private unfurls for users who do not yet have their GitHub account connected connecting their account via an Unfurl prompt of an invalid link results in a not found message 2`] = `
Object {
  "attachments": "[{\\"color\\":\\"danger\\",\\"mrkdwn_in\\":[\\"text\\"],\\"text\\":\\"Could not find resource: \`https://github.com/bkeepers/dotenv\`\\"}]",
  "channel": "C74M",
  "response_type": "ephemeral",
  "token": "xoxa-token",
  "user": "U0Other",
}
`;

exports[`Integration: unfurls private unfurls for users who do not yet have their GitHub account connected connecting their account via an Unfurl prompt of an invalid link results in a not found message 3`] = `Set {}`;

exports[`Integration: unfurls private unfurls for users who do not yet have their GitHub account connected connecting their account via an Unfurl prompt of an invalid link results in a not found message 4`] = `Map {}`;

exports[`Integration: unfurls private unfurls for users who do not yet have their GitHub account connected if they also have prompts muted they will not see any prompts when posting links 1`] = `Set {}`;

exports[`Integration: unfurls private unfurls for users who do not yet have their GitHub account connected if they also have prompts muted they will not see any prompts when posting links 2`] = `Map {}`;

exports[`Integration: unfurls private unfurls for users who do not yet have their GitHub account connected public unfurls work as normal 1`] = `
Set {
  "T0Other-C0Other-https://github.com/bkeepers/dotenv",
}
`;

exports[`Integration: unfurls private unfurls for users who do not yet have their GitHub account connected public unfurls work as normal 2`] = `
Map {
  "T0Other-C0Other-https://github.com/bkeepers/dotenv" => true,
}
`;

exports[`Integration: unfurls private unfurls no prompt is shown for unsupported resources 1`] = `Set {}`;

exports[`Integration: unfurls private unfurls no prompt is shown for unsupported resources 2`] = `Map {}`;

exports[`Integration: unfurls private unfurls no prompt is shown when repo exists but resource does not 1`] = `Set {}`;

exports[`Integration: unfurls private unfurls no prompt is shown when repo exists but resource does not 2`] = `Map {}`;

exports[`Integration: unfurls private unfurls no prompt is shown when repo returns 404 1`] = `Set {}`;

exports[`Integration: unfurls private unfurls no prompt is shown when repo returns 404 2`] = `Map {}`;

exports[`Integration: unfurls private unfurls on a workspace that has github.com unfurls disabled, an error message is shown to a user after graceful onboarding 1`] = `
Object {
  "attachments": "[{\\"color\\":\\"#24292f\\",\\"text\\":\\":white_check_mark: Success! <@U0Other> is now connected to <https://github.com/wilhelmklopp|@wilhelmklopp>\\",\\"mrkdwn_in\\":[\\"text\\"]}]",
  "channel": "C74M",
  "token": "xoxa-token",
  "user": "U0Other",
}
`;

exports[`Integration: unfurls private unfurls on a workspace that has github.com unfurls disabled, an error message is shown to a user after graceful onboarding 2`] = `
Object {
  "attachments": "[{\\"color\\":\\"danger\\",\\"mrkdwn_in\\":[\\"text\\"],\\"text\\":\\"Could not complete link preview because your workspace has disabled link previews for \`github.com\` <https://get.slack.help/hc/en-us/articles/204399343-Share-links-in-Slack#turn-off-link-previews-for-specific-sites|Read more>\\"}]",
  "channel": "C74M",
  "token": "xoxa-token",
  "user": "U0Other",
}
`;

exports[`Integration: unfurls private unfurls on a workspace that has github.com unfurls disabled, an error message is shown to a user after graceful onboarding 3`] = `Set {}`;

exports[`Integration: unfurls private unfurls on a workspace that has github.com unfurls disabled, an error message is shown to a user after graceful onboarding 4`] = `Map {}`;

exports[`Integration: unfurls private unfurls sending prompts works  1`] = `
Object {
  "attachments": "[{\\"color\\":\\"#24292f\\",\\"title\\":\\"Do you want to show a rich preview for https://github.com/bkeepers/dotenv?\\",\\"text\\":\\"The link you shared is from a private repository. Not everyone in this workspace may have access to the associated GitHub content.\\",\\"callback_id\\":\\"unfurl-123\\",\\"actions\\":[{\\"name\\":\\"unfurl\\",\\"text\\":\\"Show rich preview\\",\\"type\\":\\"button\\",\\"style\\":\\"primary\\"},{\\"name\\":\\"unfurl-dismiss\\",\\"text\\":\\"Dismiss\\",\\"type\\":\\"button\\"}]}]",
  "channel": "C0Other",
  "token": "xoxa-token",
  "user": "U88HS",
}
`;

exports[`Integration: unfurls private unfurls sending prompts works  2`] = `Set {}`;

exports[`Integration: unfurls private unfurls sending prompts works  3`] = `Map {}`;

exports[`Integration: unfurls private unfurls sends prompt for private resource that can be unfurled 1`] = `
Object {
  "attachments": "[{\\"color\\":\\"#24292f\\",\\"title\\":\\"Do you want to show a rich preview for https://github.com/bkeepers/dotenv?\\",\\"text\\":\\"The link you shared is from a private repository. Not everyone in this workspace may have access to the associated GitHub content.\\",\\"callback_id\\":\\"unfurl-123\\",\\"actions\\":[{\\"name\\":\\"unfurl\\",\\"text\\":\\"Show rich preview\\",\\"type\\":\\"button\\",\\"style\\":\\"primary\\"},{\\"name\\":\\"unfurl-dismiss\\",\\"text\\":\\"Dismiss\\",\\"type\\":\\"button\\"}]}]",
  "channel": "C74M",
  "token": "xoxa-token",
  "user": "U88HS",
}
`;

exports[`Integration: unfurls private unfurls sends prompt for private resource that can be unfurled 2`] = `Set {}`;

exports[`Integration: unfurls private unfurls sends prompt for private resource that can be unfurled 3`] = `Map {}`;

exports[`Integration: unfurls private unfurls settings User clicks "Dismiss" and gets MutePromptsPrompt User clicks "Mute prompts for 24h" A link shared after 24h does cause a prompt 1`] = `Set {}`;

exports[`Integration: unfurls private unfurls settings User clicks "Dismiss" and gets MutePromptsPrompt User clicks "Mute prompts for 24h" A link shared after 24h does cause a prompt 2`] = `Map {}`;

exports[`Integration: unfurls private unfurls settings User clicks "Dismiss" and gets MutePromptsPrompt User clicks "Mute prompts for 24h" A link shared within 24h does not cause a prompt 1`] = `Set {}`;

exports[`Integration: unfurls private unfurls settings User clicks "Dismiss" and gets MutePromptsPrompt User clicks "Mute prompts for 24h" A link shared within 24h does not cause a prompt 2`] = `Map {}`;

exports[`Integration: unfurls private unfurls settings User clicks "Dismiss" and gets MutePromptsPrompt User clicks "Mute prompts for 24h" setting is saved in the database 1`] = `Set {}`;

exports[`Integration: unfurls private unfurls settings User clicks "Dismiss" and gets MutePromptsPrompt User clicks "Mute prompts for 24h" setting is saved in the database 2`] = `Map {}`;

exports[`Integration: unfurls private unfurls settings User clicks "Dismiss" and gets MutePromptsPrompt User clicks "Mute prompts indefinitely" A shared link does not cause a prompt 1`] = `Set {}`;

exports[`Integration: unfurls private unfurls settings User clicks "Dismiss" and gets MutePromptsPrompt User clicks "Mute prompts indefinitely" A shared link does not cause a prompt 2`] = `Map {}`;

exports[`Integration: unfurls private unfurls settings User clicks "Dismiss" and gets MutePromptsPrompt User clicks "Mute prompts indefinitely" setting is saved in the database 1`] = `Set {}`;

exports[`Integration: unfurls private unfurls settings User clicks "Dismiss" and gets MutePromptsPrompt User clicks "Mute prompts indefinitely" setting is saved in the database 2`] = `Map {}`;

exports[`Integration: unfurls private unfurls settings User clicks "Dismiss" and gets MutePromptsPrompt When user clicks "Mute prompts for 24h", they get a confirmation message 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Prompts are muted for 24h :white_check_mark:
You can adjust this setting by invoking \`/github settings\`",
    },
  ],
  "replace_original": true,
}
`;

exports[`Integration: unfurls private unfurls settings User clicks "Dismiss" and gets MutePromptsPrompt When user clicks "Mute prompts for 24h", they get a confirmation message 2`] = `Set {}`;

exports[`Integration: unfurls private unfurls settings User clicks "Dismiss" and gets MutePromptsPrompt When user clicks "Mute prompts for 24h", they get a confirmation message 3`] = `Map {}`;

exports[`Integration: unfurls private unfurls settings User clicks "Dismiss" and gets MutePromptsPrompt When user clicks "Mute prompts indefinitely", they get a confirmation message 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Prompts are muted indefinitely :white_check_mark:
You can adjust this setting by invoking \`/github settings\`",
    },
  ],
  "replace_original": true,
}
`;

exports[`Integration: unfurls private unfurls settings User clicks "Dismiss" and gets MutePromptsPrompt When user clicks "Mute prompts indefinitely", they get a confirmation message 2`] = `Set {}`;

exports[`Integration: unfurls private unfurls settings User clicks "Dismiss" and gets MutePromptsPrompt When user clicks "Mute prompts indefinitely", they get a confirmation message 3`] = `Map {}`;

exports[`Integration: unfurls private unfurls settings User clicks "Show rich preview" and gets AutoUnfurlPrompt User clicks "Enable for all channels" setting is saved in the database 1`] = `
Set {
  "T000A-C74M-https://github.com/bkeepers/dotenv",
}
`;

exports[`Integration: unfurls private unfurls settings User clicks "Show rich preview" and gets AutoUnfurlPrompt User clicks "Enable for all channels" setting is saved in the database 2`] = `
Map {
  "T000A-C74M-https://github.com/bkeepers/dotenv" => true,
}
`;

exports[`Integration: unfurls private unfurls settings User clicks "Show rich preview" and gets AutoUnfurlPrompt User clicks "Enable for all channels" subsequent link (to the same repo) shared in a different channel is automatically unfurled 1`] = `
Set {
  "T000A-C74M-https://github.com/bkeepers/dotenv",
  "T000A-C0Other-https://github.com/bkeepers/dotenv",
}
`;

exports[`Integration: unfurls private unfurls settings User clicks "Show rich preview" and gets AutoUnfurlPrompt User clicks "Enable for all channels" subsequent link (to the same repo) shared in a different channel is automatically unfurled 2`] = `
Map {
  "T000A-C74M-https://github.com/bkeepers/dotenv" => true,
  "T000A-C0Other-https://github.com/bkeepers/dotenv" => true,
}
`;

exports[`Integration: unfurls private unfurls settings User clicks "Show rich preview" and gets AutoUnfurlPrompt User clicks "Enable for all channels" subsequent link shared to a different repo results in a new prompt 1`] = `
Object {
  "attachments": "[{\\"color\\":\\"#24292f\\",\\"title\\":\\"Do you want to show a rich preview for https://github.com/integrations/test?\\",\\"text\\":\\"The link you shared is from a private repository. Not everyone in this workspace may have access to the associated GitHub content.\\",\\"callback_id\\":\\"unfurl-123\\",\\"actions\\":[{\\"name\\":\\"unfurl\\",\\"text\\":\\"Show rich preview\\",\\"type\\":\\"button\\",\\"style\\":\\"primary\\"},{\\"name\\":\\"unfurl-dismiss\\",\\"text\\":\\"Dismiss\\",\\"type\\":\\"button\\"}]}]",
  "channel": "C74M",
  "token": "xoxa-token",
  "user": "U88HS",
}
`;

exports[`Integration: unfurls private unfurls settings User clicks "Show rich preview" and gets AutoUnfurlPrompt User clicks "Enable for all channels" subsequent link shared to a different repo results in a new prompt 2`] = `
Set {
  "T000A-C74M-https://github.com/bkeepers/dotenv",
}
`;

exports[`Integration: unfurls private unfurls settings User clicks "Show rich preview" and gets AutoUnfurlPrompt User clicks "Enable for all channels" subsequent link shared to a different repo results in a new prompt 3`] = `
Map {
  "T000A-C74M-https://github.com/bkeepers/dotenv" => true,
}
`;

exports[`Integration: unfurls private unfurls settings User clicks "Show rich preview" and gets AutoUnfurlPrompt User clicks "Enable for this channel" User can enable auto unfurls for the same repo in a different channel 1`] = `
Set {
  "T000A-C74M-https://github.com/bkeepers/dotenv",
}
`;

exports[`Integration: unfurls private unfurls settings User clicks "Show rich preview" and gets AutoUnfurlPrompt User clicks "Enable for this channel" User can enable auto unfurls for the same repo in a different channel 2`] = `
Map {
  "T000A-C74M-https://github.com/bkeepers/dotenv" => true,
}
`;

exports[`Integration: unfurls private unfurls settings User clicks "Show rich preview" and gets AutoUnfurlPrompt User clicks "Enable for this channel" setting is saved in the database 1`] = `
Set {
  "T000A-C74M-https://github.com/bkeepers/dotenv",
}
`;

exports[`Integration: unfurls private unfurls settings User clicks "Show rich preview" and gets AutoUnfurlPrompt User clicks "Enable for this channel" setting is saved in the database 2`] = `
Map {
  "T000A-C74M-https://github.com/bkeepers/dotenv" => true,
}
`;

exports[`Integration: unfurls private unfurls settings User clicks "Show rich preview" and gets AutoUnfurlPrompt User clicks "Enable for this channel" subsequent link (to the same repo) shared in the same channel is automatically unfurled 1`] = `
Set {
  "T000A-C74M-https://github.com/bkeepers/dotenv",
  "T000A-C74M-https://github.com/bkeepers/dotenv/issues/1",
}
`;

exports[`Integration: unfurls private unfurls settings User clicks "Show rich preview" and gets AutoUnfurlPrompt User clicks "Enable for this channel" subsequent link (to the same repo) shared in the same channel is automatically unfurled 2`] = `
Map {
  "T000A-C74M-https://github.com/bkeepers/dotenv" => true,
  "T000A-C74M-https://github.com/bkeepers/dotenv/issues/1" => true,
}
`;

exports[`Integration: unfurls private unfurls settings User clicks "Show rich preview" and gets AutoUnfurlPrompt User clicks "Enable for this channel" subsequent link shared in a different channel results in a new prompt 1`] = `
Object {
  "attachments": "[{\\"color\\":\\"#24292f\\",\\"title\\":\\"Do you want to show a rich preview for https://github.com/bkeepers/dotenv?\\",\\"text\\":\\"The link you shared is from a private repository. Not everyone in this workspace may have access to the associated GitHub content.\\",\\"callback_id\\":\\"unfurl-123\\",\\"actions\\":[{\\"name\\":\\"unfurl\\",\\"text\\":\\"Show rich preview\\",\\"type\\":\\"button\\",\\"style\\":\\"primary\\"},{\\"name\\":\\"unfurl-dismiss\\",\\"text\\":\\"Dismiss\\",\\"type\\":\\"button\\"}]}]",
  "channel": "C0Other",
  "token": "xoxa-token",
  "user": "U88HS",
}
`;

exports[`Integration: unfurls private unfurls settings User clicks "Show rich preview" and gets AutoUnfurlPrompt User clicks "Enable for this channel" subsequent link shared in a different channel results in a new prompt 2`] = `
Set {
  "T000A-C74M-https://github.com/bkeepers/dotenv",
}
`;

exports[`Integration: unfurls private unfurls settings User clicks "Show rich preview" and gets AutoUnfurlPrompt User clicks "Enable for this channel" subsequent link shared in a different channel results in a new prompt 3`] = `
Map {
  "T000A-C74M-https://github.com/bkeepers/dotenv" => true,
}
`;

exports[`Integration: unfurls private unfurls settings User clicks "Show rich preview" and gets AutoUnfurlPrompt User clicks "Enable for this channel" subsequent link shared in the same channel to a different repo results in a new prompt 1`] = `
Object {
  "attachments": "[{\\"color\\":\\"#24292f\\",\\"title\\":\\"Do you want to show a rich preview for https://github.com/integrations/test?\\",\\"text\\":\\"The link you shared is from a private repository. Not everyone in this workspace may have access to the associated GitHub content.\\",\\"callback_id\\":\\"unfurl-123\\",\\"actions\\":[{\\"name\\":\\"unfurl\\",\\"text\\":\\"Show rich preview\\",\\"type\\":\\"button\\",\\"style\\":\\"primary\\"},{\\"name\\":\\"unfurl-dismiss\\",\\"text\\":\\"Dismiss\\",\\"type\\":\\"button\\"}]}]",
  "channel": "C74M",
  "token": "xoxa-token",
  "user": "U88HS",
}
`;

exports[`Integration: unfurls private unfurls settings User clicks "Show rich preview" and gets AutoUnfurlPrompt User clicks "Enable for this channel" subsequent link shared in the same channel to a different repo results in a new prompt 2`] = `
Set {
  "T000A-C74M-https://github.com/bkeepers/dotenv",
}
`;

exports[`Integration: unfurls private unfurls settings User clicks "Show rich preview" and gets AutoUnfurlPrompt User clicks "Enable for this channel" subsequent link shared in the same channel to a different repo results in a new prompt 3`] = `
Map {
  "T000A-C74M-https://github.com/bkeepers/dotenv" => true,
}
`;

exports[`Integration: unfurls private unfurls settings User clicks "Show rich preview" and gets AutoUnfurlPrompt when user clicks "Enable for all channels", they get a confirmation message 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Links to \`bkeepers/dotenv\` that you post in any channel of this workspace will automatically have a rich preview :white_check_mark:",
    },
  ],
  "replace_original": true,
}
`;

exports[`Integration: unfurls private unfurls settings User clicks "Show rich preview" and gets AutoUnfurlPrompt when user clicks "Enable for all channels", they get a confirmation message 2`] = `
Set {
  "T000A-C74M-https://github.com/bkeepers/dotenv",
}
`;

exports[`Integration: unfurls private unfurls settings User clicks "Show rich preview" and gets AutoUnfurlPrompt when user clicks "Enable for all channels", they get a confirmation message 3`] = `
Map {
  "T000A-C74M-https://github.com/bkeepers/dotenv" => true,
}
`;

exports[`Integration: unfurls private unfurls settings User clicks "Show rich preview" and gets AutoUnfurlPrompt when user clicks "Enable for this channel", they get a confirmation message 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Links to \`bkeepers/dotenv\` that you post in this channel will automatically have a rich preview :white_check_mark:",
    },
  ],
  "replace_original": true,
}
`;

exports[`Integration: unfurls private unfurls settings User clicks "Show rich preview" and gets AutoUnfurlPrompt when user clicks "Enable for this channel", they get a confirmation message 2`] = `
Set {
  "T000A-C74M-https://github.com/bkeepers/dotenv",
}
`;

exports[`Integration: unfurls private unfurls settings User clicks "Show rich preview" and gets AutoUnfurlPrompt when user clicks "Enable for this channel", they get a confirmation message 3`] = `
Map {
  "T000A-C74M-https://github.com/bkeepers/dotenv" => true,
}
`;

exports[`Integration: unfurls private unfurls settings when user clicks "dismiss" 5 times, the MutePromptsPrompt is shown 1`] = `
Object {
  "delete_original": true,
}
`;

exports[`Integration: unfurls private unfurls settings when user clicks "dismiss" 5 times, the MutePromptsPrompt is shown 2`] = `
Object {
  "delete_original": true,
}
`;

exports[`Integration: unfurls private unfurls settings when user clicks "dismiss" 5 times, the MutePromptsPrompt is shown 3`] = `
Object {
  "delete_original": true,
}
`;

exports[`Integration: unfurls private unfurls settings when user clicks "dismiss" 5 times, the MutePromptsPrompt is shown 4`] = `
Object {
  "delete_original": true,
}
`;

exports[`Integration: unfurls private unfurls settings when user clicks "dismiss" 5 times, the MutePromptsPrompt is shown 5`] = `
Object {
  "attachments": Array [
    Object {
      "actions": Array [
        Object {
          "name": "mute-24h",
          "text": "Mute prompts for 24h",
          "type": "button",
        },
        Object {
          "name": "mute-indefinitely",
          "text": "Mute prompts indefinitely",
          "type": "button",
        },
        Object {
          "name": "cancel",
          "text": "Always ask me",
          "type": "button",
        },
      ],
      "callback_id": "unfurl-mute-prompts",
      "color": "#24292f",
      "title": "Getting too many prompts?",
    },
  ],
  "delete_original": true,
}
`;

exports[`Integration: unfurls private unfurls settings when user clicks "dismiss" 5 times, the MutePromptsPrompt is shown 6`] = `Set {}`;

exports[`Integration: unfurls private unfurls settings when user clicks "dismiss" 5 times, the MutePromptsPrompt is shown 7`] = `Map {}`;

exports[`Integration: unfurls private unfurls settings when user clicks "dismiss", no follow up prompt is immediately shown 1`] = `
Object {
  "delete_original": true,
}
`;

exports[`Integration: unfurls private unfurls settings when user clicks "dismiss", no follow up prompt is immediately shown 2`] = `Set {}`;

exports[`Integration: unfurls private unfurls settings when user clicks "dismiss", no follow up prompt is immediately shown 3`] = `Map {}`;

exports[`Integration: unfurls private unfurls throws error when user is not linked 1`] = `Set {}`;

exports[`Integration: unfurls private unfurls throws error when user is not linked 2`] = `Map {}`;

exports[`Integration: unfurls private unfurls unfurls resources that cannot be private (such as organisations) without looking up repo privacy 1`] = `
Object {
  "channel": "C74M",
  "token": "xoxa-token",
  "ts": "1510704981.000364",
  "unfurls": "{\\"https://github.com/kubernetes\\":{\\"color\\":\\"#24292f\\",\\"footer\\":\\"<https://github.com/kubernetes|@kubernetes>\\",\\"footer_icon\\":\\"https://assets-cdn.github.com/favicon.ico\\",\\"fallback\\":\\"Kubernetes\\",\\"title\\":\\"Kubernetes\\",\\"text\\":\\"Kubernetes\\",\\"thumb_url\\":\\"https://avatars2.githubusercontent.com/u/13629408?v=4\\",\\"fields\\":[{\\"title\\":\\"URL\\",\\"value\\":\\"http://kubernetes.io\\",\\"short\\":true},{\\"title\\":\\"Repositories\\",\\"value\\":51,\\"short\\":true}],\\"ts\\":1438624543}}",
}
`;

exports[`Integration: unfurls private unfurls unfurls resources that cannot be private (such as organisations) without looking up repo privacy 2`] = `
Set {
  "T000A-C74M-https://github.com/kubernetes",
}
`;

exports[`Integration: unfurls private unfurls unfurls resources that cannot be private (such as organisations) without looking up repo privacy 3`] = `
Map {
  "T000A-C74M-https://github.com/kubernetes" => true,
}
`;

exports[`Integration: unfurls private unfurls user sees error message when github.com unfurls are disabled in the workspace 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "danger",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Could not complete link preview because your workspace has disabled link previews for \`github.com\` <https://get.slack.help/hc/en-us/articles/204399343-Share-links-in-Slack#turn-off-link-previews-for-specific-sites|Read more>",
    },
  ],
  "delete_original": true,
}
`;

exports[`Integration: unfurls private unfurls user sees error message when github.com unfurls are disabled in the workspace 2`] = `Set {}`;

exports[`Integration: unfurls private unfurls user sees error message when github.com unfurls are disabled in the workspace 3`] = `Map {}`;

exports[`Integration: unfurls private unfurls uses user access token for public resources 1`] = `
Object {
  "channel": "C74M",
  "token": "xoxa-token",
  "ts": "1510704981.000364",
  "unfurls": "{\\"https://github.com/bkeepers/dotenv\\":{\\"color\\":\\"#24292f\\",\\"footer\\":\\"<https://github.com/bkeepers/dotenv|bkeepers/dotenv>\\",\\"footer_icon\\":\\"https://assets-cdn.github.com/favicon.ico\\",\\"fallback\\":\\"bkeepers/dotenv\\",\\"title\\":\\"bkeepers/dotenv\\",\\"text\\":\\"A Ruby gem to load environment variables from \`.env\`. \\",\\"fields\\":[{\\"title\\":\\"Stars\\",\\"value\\":4230,\\"short\\":true},{\\"title\\":\\"Language\\",\\"value\\":\\"Ruby\\",\\"short\\":true}],\\"mrkdwn_in\\":[\\"text\\",\\"fields\\"],\\"ts\\":1343101131}}",
}
`;

exports[`Integration: unfurls private unfurls uses user access token for public resources 2`] = `
Set {
  "T000A-C74M-https://github.com/bkeepers/dotenv",
}
`;

exports[`Integration: unfurls private unfurls uses user access token for public resources 3`] = `
Map {
  "T000A-C74M-https://github.com/bkeepers/dotenv" => true,
}
`;

exports[`Integration: unfurls public unfurls Successful unfurl gets stored in db 1`] = `
Set {
  "T000A-C74M-https://github.com/bkeepers/dotenv",
}
`;

exports[`Integration: unfurls public unfurls Successful unfurl gets stored in db 2`] = `
Map {
  "T000A-C74M-https://github.com/bkeepers/dotenv" => true,
}
`;

exports[`Integration: unfurls public unfurls Unsuccessful unfurl does not get stored in db 1`] = `Set {}`;

exports[`Integration: unfurls public unfurls Unsuccessful unfurl does not get stored in db 2`] = `Map {}`;

exports[`Integration: unfurls public unfurls does minor unfurl if 2 links are shared 1`] = `
Object {
  "channel": "C74M",
  "token": "xoxa-token",
  "ts": "1510704981.000364",
  "unfurls": "{\\"https://github.com/facebook/react/issues/10191\\":{\\"color\\":\\"#cb2431\\",\\"footer\\":\\"<https://github.com/bkeepers/dotenv|bkeepers/dotenv>\\",\\"footer_icon\\":\\"https://assets-cdn.github.com/favicon.ico\\",\\"ts\\":1500156238,\\"mrkdwn_in\\":[\\"text\\"],\\"title\\":\\"#10191 Consider re-licensing to AL v2.0, as RocksDB has just done\\",\\"title_link\\":\\"https://github.com/facebook/react/issues/10191\\",\\"fallback\\":\\"[bkeepers/dotenv] #10191 Consider re-licensing to AL v2.0, as RocksDB has just done\\"}}",
}
`;

exports[`Integration: unfurls public unfurls does minor unfurl if 2 links are shared 2`] = `
Object {
  "channel": "C74M",
  "token": "xoxa-token",
  "ts": "1510704981.000364",
  "unfurls": "{\\"https://github.com/atom/atom/issues/16292\\":{\\"color\\":\\"#cb2431\\",\\"footer\\":\\"<https://github.com/bkeepers/dotenv|bkeepers/dotenv>\\",\\"footer_icon\\":\\"https://assets-cdn.github.com/favicon.ico\\",\\"ts\\":1500156238,\\"mrkdwn_in\\":[\\"text\\"],\\"title\\":\\"#10191 Consider re-licensing to AL v2.0, as RocksDB has just done\\",\\"title_link\\":\\"https://github.com/facebook/react/issues/10191\\",\\"fallback\\":\\"[bkeepers/dotenv] #10191 Consider re-licensing to AL v2.0, as RocksDB has just done\\"}}",
}
`;

exports[`Integration: unfurls public unfurls does minor unfurl if 2 links are shared 3`] = `
Set {
  "T000A-C74M-https://github.com/facebook/react/issues/10191",
  "T000A-C74M-https://github.com/atom/atom/issues/16292",
}
`;

exports[`Integration: unfurls public unfurls does minor unfurl if 2 links are shared 4`] = `
Map {
  "T000A-C74M-https://github.com/facebook/react/issues/10191" => true,
  "T000A-C74M-https://github.com/atom/atom/issues/16292" => true,
}
`;

exports[`Integration: unfurls public unfurls does not unfurl if more than 2 links 1`] = `Set {}`;

exports[`Integration: unfurls public unfurls does not unfurl if more than 2 links 2`] = `Map {}`;

exports[`Integration: unfurls public unfurls fails silently when github.com unfurls are disabled in the workspace 1`] = `Set {}`;

exports[`Integration: unfurls public unfurls fails silently when github.com unfurls are disabled in the workspace 2`] = `Map {}`;

exports[`Integration: unfurls public unfurls gracefully handles not found link or private link without permissions 1`] = `Set {}`;

exports[`Integration: unfurls public unfurls gracefully handles not found link or private link without permissions 2`] = `Map {}`;

exports[`Integration: unfurls public unfurls gracefully handles unknown resources 1`] = `Set {}`;

exports[`Integration: unfurls public unfurls gracefully handles unknown resources 2`] = `Map {}`;

exports[`Integration: unfurls public unfurls issue 1`] = `
Object {
  "channel": "C74M",
  "token": "xoxa-token",
  "ts": "1510704981.000364",
  "unfurls": "{\\"https://github.com/bkeepers/dotenv\\":{\\"color\\":\\"#24292f\\",\\"footer\\":\\"<https://github.com/bkeepers/dotenv|bkeepers/dotenv>\\",\\"footer_icon\\":\\"https://assets-cdn.github.com/favicon.ico\\",\\"fallback\\":\\"bkeepers/dotenv\\",\\"title\\":\\"bkeepers/dotenv\\",\\"text\\":\\"A Ruby gem to load environment variables from \`.env\`. \\",\\"fields\\":[{\\"title\\":\\"Stars\\",\\"value\\":4230,\\"short\\":true},{\\"title\\":\\"Language\\",\\"value\\":\\"Ruby\\",\\"short\\":true}],\\"mrkdwn_in\\":[\\"text\\",\\"fields\\"],\\"ts\\":1343101131}}",
}
`;

exports[`Integration: unfurls public unfurls issue 2`] = `
Set {
  "T000A-C74M-https://github.com/bkeepers/dotenv",
}
`;

exports[`Integration: unfurls public unfurls issue 3`] = `
Map {
  "T000A-C74M-https://github.com/bkeepers/dotenv" => true,
}
`;

exports[`Integration: unfurls public unfurls only unfurls link first time a link is shared 1`] = `
Object {
  "channel": "C74M",
  "token": "xoxa-token",
  "ts": "1510704981.000364",
  "unfurls": "{\\"https://github.com/bkeepers/dotenv\\":{\\"color\\":\\"#24292f\\",\\"footer\\":\\"<https://github.com/bkeepers/dotenv|bkeepers/dotenv>\\",\\"footer_icon\\":\\"https://assets-cdn.github.com/favicon.ico\\",\\"fallback\\":\\"bkeepers/dotenv\\",\\"title\\":\\"bkeepers/dotenv\\",\\"text\\":\\"A Ruby gem to load environment variables from \`.env\`. \\",\\"fields\\":[{\\"title\\":\\"Stars\\",\\"value\\":4230,\\"short\\":true},{\\"title\\":\\"Language\\",\\"value\\":\\"Ruby\\",\\"short\\":true}],\\"mrkdwn_in\\":[\\"text\\",\\"fields\\"],\\"ts\\":1343101131}}",
}
`;

exports[`Integration: unfurls public unfurls only unfurls link first time a link is shared 2`] = `
Set {
  "T000A-C74M-https://github.com/bkeepers/dotenv",
}
`;

exports[`Integration: unfurls public unfurls only unfurls link first time a link is shared 3`] = `
Map {
  "T000A-C74M-https://github.com/bkeepers/dotenv" => true,
}
`;

exports[`Integration: unfurls public unfurls renders 500 when other error happens 1`] = `Set {}`;

exports[`Integration: unfurls public unfurls renders 500 when other error happens 2`] = `Map {}`;
